# barus

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-docker-image.sh  build.rs  docker-compose.yml  pgo_setup.sh
data/wal/: state.json
proto/: barus.proto
src/: config.rs  db.rs  errors.rs  grpc.rs  http.rs  lib.rs  lock.rs  main.rs  os.rs  system.rs  validate.rs  wal.rs
src/bridge/: event.rs  mod.rs
src/compaction/: mod.rs
src/disktable/: mod.rs  record.rs  table.rs
src/disktable/index/: btree.rs  mod.rs
src/disktable/segment/: encode.rs  id.rs  mod.rs  position.rs  record.rs  segment_id.rs  state.rs
src/memtable/: mod.rs  table.rs
src/swagger/: axum.rs  favicon.rs  html.rs  mod.rs  swagger.json  swagger_json.rs  swagger_ui_bundle.rs
src/wal/: encode.rs  mmap.rs  mod.rs  record.rs  record_id.rs  segment.rs  segment_id.rs  state.rs
