[package]
name = "barus"
version = "0.0.0"
edition = "2024"
license = "MIT" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "ready" 
keywords = [] 
include = ["src/*", "Cargo.toml"]
exclude = []
readme = "README.md" 
repository = "https://github.com/myyrakle/barus"
documentation = "https://github.com/myyrakle/barus/blob/master/README.md"
homepage = "https://github.com/myyrakle/barus/blob/master/README.md"


[dependencies]
tokio = { version = "1", features = ["macros", "rt", "net", "rt-multi-thread", "time"] }
serde = { version="1.0.228", features=["derive"]}
serde_json = "1.0.145"
log = "0.4.20"
axum = "0.8.6"
