[package]
name = "barus"
version = "0.0.0"
edition = "2024"
license = "MIT" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "ready" 
keywords = [] 
include = ["src/*", "Cargo.toml"]
exclude = []
readme = "README.md" 
repository = "https://github.com/myyrakle/barus"
documentation = "https://github.com/myyrakle/barus/blob/master/README.md"
homepage = "https://github.com/myyrakle/barus/blob/master/README.md"


[dependencies]
tokio = { version = "1", features = ["macros", "rt", "net", "rt-multi-thread", "time", "fs", "io-util"] }
serde = { version="1.0.228", features=["derive"]}
serde_json = "1.0.145"
log = "0.4.20"
axum = "0.8.6"
bincode = { version = "2", features = ["serde"] }
libc = "0.2.177"
tonic = "0.12"
prost = "0.13"
memmap2 = "0.9"  # mmap 라이브러리

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { version = "0.5.4", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
lto = true
strip = "debuginfo"
panic = "abort"